# openmyst

./: CrashHandler.h  Files.h  Geo2d.h  Logger.h  Math.h  Rand.h  StringHelpers.h  Vector.h  readme.MD  run_client.sh  run_server.sh
Detours/: detours.h
Shared/: AccountDefines.h  CharacterDefines.h  ChatDefines.h  Commands.h  Conditions.h  Config.h  CooldownHolder.h  DmystVersion.h  GameDefines.h  GameMap.h  GameObjDefines.h  GamePacketClient.h  GamePacketServer.h  GuildDefines.h  ItemAffix.h  ItemDefiner.h  ItemDefines.h  ItemTemplate.h  MapCellT.h  MapLogic.h  Md5.h  MutualObject.h  MutualUnit.h  NpcDefines.h  Opcodes.h  PlayerDefines.h  QuestDefines.h  ScriptDefines.h  SfSocket.h  SpellDefines.h  StlBuffer.h  UnitDefines.h
SqlConnector/: QueryResult.h  SqlConnector.h
assets/: audit_assets.py  audit_report.json  game.db
assets/content/map/: list.bat  readme.txt
assets/maps/: fanadin.map  st_maria_3.map  temple_of_mez_1.map  wizards_tower_2.map
assets/scripts/: dbtables.txt  dbtables_dev.txt
assets/scripts/animation/: angel_001.sa  angel_001a.sa  arrow_east.sa  (+101 more)
dreadmyst-client/: CMakeLists.txt
dreadmyst-client/src/: main.cpp
dreadmyst-client/src/core/: Application.cpp  Application.h  Log.h  Types.h
dreadmyst-client/src/game/: WorldState.cpp  WorldState.h
dreadmyst-client/src/input/: InputManager.cpp  InputManager.h
dreadmyst-client/src/map/: Camera.cpp  Camera.h  ClientMap.cpp  ClientMap.h  MapCell.cpp  MapCell.h  MapRenderer.cpp  MapRenderer.h
dreadmyst-client/src/network/: Connection.cpp  Connection.h  PacketHandler.cpp  PacketHandler.h  PacketSender.cpp  PacketSender.h
dreadmyst-client/src/render/: EntityRenderer.cpp  EntityRenderer.h  ModelScript.cpp  ModelScript.h  SpriteAnimator.cpp  SpriteAnimator.h  SpriteManager.cpp  SpriteManager.h  SpriteSheet.h
dreadmyst-client/src/resource/: ContentDB.cpp  ContentDB.h  MapLoader.cpp  MapLoader.h  ResourceManager.cpp  ResourceManager.h
dreadmyst-client/src/shared/: Config.cpp  SfSocket.cpp  StlBuffer.cpp
dreadmyst-client/src/ui/: Button.cpp  Button.h  FontManager.cpp  FontManager.h  ImageWidget.h  Label.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  UIManager.cpp  UIManager.h  Widget.cpp  Widget.h
dreadmyst-client/src/ui/hud/: ChatWindow.cpp  ChatWindow.h  Toolbar.cpp  Toolbar.h  UnitFrame.cpp  UnitFrame.h
dreadmyst-server/: CMakeLists.txt  config.ini
dreadmyst-server/sql/: schema.sql
dreadmyst-server/src/: main.cpp
dreadmyst-server/src/core/: Config.cpp  Config.h  Log.cpp  Log.h  Server.cpp  Server.h  Types.h
dreadmyst-server/src/database/: DatabaseMgr.cpp  DatabaseMgr.h  MySQLConnector.cpp  MySQLConnector.h  PlayerDb.cpp  PlayerDb.h  QueuedQuery.cpp  QueuedQuery.h  SQLiteConnector.cpp  SQLiteConnector.h
dreadmyst-server/src/game/: Arena.cpp  Arena.h  ChatSystem.cpp  ChatSystem.h  Combat.cpp  Combat.h  GameCache.cpp  GameCache.h  Gossip.cpp  Gossip.h  Guild.cpp  Guild.h  LootRoller.cpp  LootRoller.h  MutualObject.cpp  MutualObject.h  Party.cpp  Party.h  PlayerMgr.cpp  PlayerMgr.h  Script.cpp  Script.h  ServerGameObj.cpp  ServerGameObj.h  ServerMap.cpp  ServerMap.h  ServerNpc.cpp  ServerNpc.h  ServerPlayer.cpp  ServerPlayer.h  ServerUnit.cpp  ServerUnit.h  Spell.cpp  Spell.h  Trade.cpp  Trade.h
dreadmyst-server/src/game/templates/: ClassStats.h  GameObjectTemplate.h  ItemTemplate.h  MapTemplate.h  NpcTemplate.h  QuestTemplate.h  SpellTemplate.h
dreadmyst-server/src/network/: GamePacket.cpp  GamePacket.h  NetworkMgr.cpp  NetworkMgr.h  Opcodes.h  Session.cpp  Session.h
dreadmyst-server/src/packets/: PacketHandler.cpp  PacketHandler.h
(+509 files in other folders)
